# Dump-2-Newbie

./: CMakeLists.txt  README.md
App/: CMakeLists.txt  Window.cpp  Window.hpp  main.cpp
Custom/: CMakeLists.txt  Scene.cpp  Scene.hpp  custom.cpp  custom.hpp  custom_global.hpp  custom_project.json
Custom/Material/: DefaultMaterial.cpp  DefaultMaterial.hpp
Custom/Scenes/: bunny_scene.json  girl_scene.json
Custom/Scripts/: RotateScript.cpp  RotateScript.hpp
Custom/Shaders/: unlit_frag.glsl  unlit_vert.glsl
Editor/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui  scenewidget.cpp  scenewidget.h  trianglewidget.cpp  trianglewidget.h
Engine/: CMakeLists.txt  Engine.hpp  engine.cpp  engine.h  engine.hpp  engine_global.hpp
Engine/Common/: Component.cpp  Component.hpp  Debug.hpp  GameObject.cpp  GameObject.hpp  Object.cpp  Object.hpp  Project.cpp  Project.hpp  Resource.cpp  Resource.hpp  Scene.cpp  Scene.hpp  Script.cpp  Script.hpp  Storage.cpp  Storage.hpp  Time.cpp  Time.hpp  Transform.cpp  Transform.hpp  Type.cpp  Type.hpp  World.cpp  World.hpp
Engine/Core/: Component.cpp  Component.hpp  Debug.cpp  Debug.hpp  Object.cpp  Object.hpp  Resource.cpp  Resource.hpp  Scene.cpp  Scene.hpp  Script.cpp  Script.hpp  Storage.cpp  Storage.hpp  Time.cpp  Time.hpp  Transform.cpp  Transform.hpp  World.cpp  World.hpp
Engine/Graphics/: Camera.cpp  Camera.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
Scene/: CMakeLists.txt
